--- a/templates/about.html
+++ b/templates/about.html
@@ -44,13 +44,83 @@
     />
   </div>
   <div class="col-md-7">
-    <h3>Fili and Kili</h3>
+    <h3>Fíli and Kíli</h3>
     <p>
       Fíli and Kíli were nephews of Thorin, who was the elder brother of their
       mother Dís. They were also nephews of Frerin, grandsons of Thráin II, and
       great-grandsons of Thrór. Fíli's most distinguishing feature was his long
       nose, the longest of any of the Dwarves in Thorin's company.
     </p>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Óin</h3>
+    <p>
+      Óin fought in the Battle of Azanulbizar along with Thorin Oakenshield, and
+      in TA 2941 joined Thorin's company on the quest to reclaim the Lonely
+      Mountain, wearing a brown hood.[2] Óin was one of the Dwarves who bet that
+      Bilbo would come along with them to reclaim the Lonely Mountain. Óin and
+      his brother Glóin were usually in charge of preparing the fire for the
+      Company, as they were the most skilled of the group. He fought in and
+      survived the Battle of Five Armies, and later settled in the Lonely
+      Mountain with King Dáin II Ironfoot, along with many other Dwarves of the
+      company of Thorin.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/2/20/Oin_2.jpg/"
+      alt=""
+    />
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg"
+      alt=""
+    />
+  </div>
+  <div class="col-md-7">
+    <h3>Glóin</h3>
+    <p>
+      Glóin was born in TA 2783, after the dragon Smaug desolated Erebor. He was
+      the younger child of Gróin and younger brother of Óin. In TA 2799, Glóin
+      was known to have fought in the Battle of Azanulbizar, the last battle of
+      the War of the Dwarves and Orcs, though it is unknown how significant his
+      contribution was, being 16 years old. In TA 2879, in the Blue Mountains,
+      while in exile, his son Gimli was born to him and an unknown wife. In
+      March of TA 2941 in Bree, Thorin Oakenshield met by chance the wizard
+      Gandalf the Grey, pushing Thorin to reclaim Erebor, so that Smaug wouldn't
+      ally with Sauron. When Gandalf mentioned Hobbits, Glóin referred them as
+      "simpletons" and also said that Hobbits "would never dare to come within
+      smelling distance of the nakedest dragonet new from the shell".
+    </p>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Balin</h3>
+    <p>
+      Balin was likely born in the Lonely Mountain before the coming of the
+      dragon Smaug. He had a younger brother named Dwalin, and was amongst those
+      driven from their homes when Smaug attacked the Lonely Mountain.
+      Afterwards, he may have lived in Dunland as a refugee, before fighting in
+      the War of the Dwarves and Orcs which culminated in the Battle of
+      Azanulbizar. Many years later, in approximately TA 2841, he accompanied
+      Thráin II, the father of Thorin, when he attempted to go back to the
+      Lonely Mountain himself, but Thráin was captured and lost.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/5/52/Balin.jpg"
+      alt=""
+    />
   </div>
 </div>
 {% endblock %}
