feat: added Dori, Ori, and Dwalin to about.html.

--- a/templates/about.html
+++ b/templates/about.html
@@ -123,4 +123,61 @@
     />
   </div>
 </div>
+
+<div class="row featurette">
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg"
+      alt=""
+    />
+  </div>
+  <div class="col-md-7">
+    <h3>Dwalin</h3>
+    <p>
+      Born in TA 2772, two years after the dragon Smaug had desolated Erebor,
+      Dwalin was the son of Fundin and younger brother of Balin. After fighting
+      in the Battle of Azanulbizar at the age of 27, Dwalin accompanied Thráin
+      II and Thorin Oakenshield to settle peacefully in the northern Ered Luin.
+    </p>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Ori</h3>
+    <p>
+      Ori lived in Thorin's hall in the northern Blue Mountains for many years,
+      alongside his cousins: Dori and Nori. In the year TA 2941, Ori became a
+      member of Thorin's Company and travelled with Thorin, Gandalf, Bilbo
+      Baggins, and the other Dwarves on the quest for the Lonely Mountain,
+      culminating in the death of Smaug. Finally, he and the other Dwarves of
+      Thorin's Company fought in the Battle of Five Armies in TA 2942, which he
+      survived.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg"
+      alt=""
+    />
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/2/27/Mark_Hadlow_as_Dori.jpg"
+      alt=""
+    />
+  </div>
+  <div class="col-md-7">
+    <h3>Dori</h3>
+    <p>
+      Before the Quest of Erebor, Dori lived in Thorin's hall in the northern
+      Blue Mountains with Nori and Ori. In TA 2941, the three became part of
+      Thorin and Company, befriending Bilbo Baggins and traveling with him in
+      search of Smaug's treasure at the Lonely Mountain.
+    </p>
+  </div>
+</div>
 {% endblock %}
