--- a/templates/about.html
+++ b/templates/about.html
@@ -180,4 +180,112 @@
     </p>
   </div>
 </div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Nori</h3>
+    <p>
+      Nori, as was his brother Dori, was a capable flutist, and both seem to
+      have carried their flutes with them. Both shared Bilbo's liking for
+      regular meals. Before the Quest for the Lonely Mountain, Nori lived in
+      Thorin's Halls in the northern Blue Mountains with his two brothers.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/5/50/Untitled-31.png"
+      alt=""
+    />
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/7/73/Bifur_2.jpg"
+      alt=""
+    />
+  </div>
+  <div class="col-md-7">
+    <h3>Bifur</h3>
+    <p>
+      Whilst he was a descendant of the Dwarves of Khazad-dûm, Bifur was not
+      related to the royal House of Durin. Most of his familial relations are
+      unclear, and what is known of his parentage is very little. He and his
+      family were driven out of their home in the Lonely Mountain by the dragon
+      Smaug, and were forced to live in exile, where the Dwarf warrior worked as
+      a toy maker. Following Thorin II Oakenshield to a new life at his halls in
+      the Blue Mountains, he continued his life as a toy maker.
+    </p>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Bofur</h3>
+    <p>
+      While answering Thorin Oakenshield's quest to Erebor, Bofur went to the
+      meeting at Bag End with his brother Bombur and cousin Bifur. He
+      accompanied Thorin, Gandalf, Bilbo Baggins, and rest of Thorin's Company
+      across Wilderland to the Lonely Mountain in order to reclaim the Dwarves'
+      treasure from the dragon Smaug. Following the dragon's demise, Bofur
+      participated in and survived the Battle of Five Armies, receiving his
+      fourteenth share of the treasure as agreed upon.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/5/56/Bofur_Nesbitt.jpg"
+      alt=""
+    />
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/e/ed/Bombur.jpg"
+      alt=""
+    />
+  </div>
+  <div class="col-md-7">
+    <h3>Bombur</h3>
+    <p>
+      Bombur's parentage is unknown. He was the brother of Bofur and cousin of
+      Bifur. Bombur was not of Durin's line, although he was descended from the
+      Dwarves of Khazad-dûm. His birth date is unknown, though it fell somewhere
+      between TA 2763 and TA 2859; the brothers Fíli and Kíli were the youngest
+      of the thirteen "by some fifty years," and, after Thorin was captured,
+      Balin was "the eldest left." Fíli was born in TA 2859, and Balin was born
+      in TA 2763. Bombur was thus roughly 150 years old during the quest. Prior
+      to the journey, Bombur likely resided in the Blue Mountains alongside
+      Thorin, after the loss of Thráin II.
+    </p>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h3>Gandalf</h3>
+    <p>
+      Originally called <i>Olórin</i>, he was accounted as the wisest of the
+      Maiar. He was created by Ilúvatar before the Music of the Ainur[1], and
+      was at the beginning of Time amongst the Ainur who entered into Eä.[2] In
+      his "youth" he became one of the Maiar who served Manwë, Varda, Irmo, and
+      Nienna. He was associated with light and fire, much like Varda[3], yet his
+      ways often took him to Nienna, from whom he learned pity and patience. He
+      loved the Elves, but walked unseen among them, or wore the guise of an
+      Elf, and sent them fair visions in their hearts that made them wiser.
+      Throughout his life he followed the example of Nienna, talking pity on the
+      sorrows of the Children of Ilúvatar and drawing those who listened to him
+      out of despair.
+    </p>
+  </div>
+  <div class="col-md-5">
+    <img
+      src="https://vignette.wikia.nocookie.net/lotr/images/8/8d/Gandalf-2.jpg"
+      alt=""
+    />
+  </div>
+</div>
 {% endblock %}
